<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".TakePhoto">

    <ImageView
        android:id="@+id/img"
        android:scaleType="centerCrop"
        android:src="@drawable/p"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:contentDescription="@string/grocery_items_image_description" />

    <Button
        android:id="@+id/capture_image_btn"
        android:text="@string/capture_image"
        style="@style/Base.Theme.RecipeRoulette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/select_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photo_from_camera_roll" />

    <Button
        android:id="@+id/send_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_image" />


    <Button
        android:id="@+id/manual_entry_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_enter" />

</LinearLayout>