...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/rq_ingredient_entry"
        android:layout_width="237dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/ingredient"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/rq_ingredreq_but"
        android:layout_width="174dp"
        android:layout_height="69dp"
        android:text="@string/req_ingredient"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rq_ingredient_entry"
        app:layout_constraintVertical_bias="0.84" />

    <EditText
        android:id="@+id/rq_contact_entry"
        android:layout_width="240dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/contact_details"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/rq_ingredreq_but"
...
