...
    <TextView
        android:id="@+id/rev_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_review"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/rev_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rev_recycler"
...
